FLY-15380 search results : search query debounce added and loading not showing while doing search issue fixed and relevent results count while filters or search query applied issue fixed

--- a/src/plugins/answers/templates/relevantResultsTemplate/relevantResults.scss
+++ b/src/plugins/answers/templates/relevantResultsTemplate/relevantResults.scss
@@ -10,6 +10,9 @@
     border-top-color: var(--sdk-global-theme-color);
     animation: results-spin 0.7s linear infinite;
 }
+.sa-answer-results-loading-container{
+    min-height: 200px;
+}
 
 .sa-answer-no-results-container{
     .sa-answer-no-results-icon{
